<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="asteroides">Asteroides</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acerca">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="acercade">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>

</resources>